--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   freezed_annotation: ^3.1.0
   cupertino_icons: ^1.0.8
   http: ^0.13.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
